--- a/public/stylesheets/compiled/site.css
+++ b/public/stylesheets/compiled/site.css
@@ -768,24 +768,19 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
 
 /*Google Style Menu */
 /* line 557, ../../../app/stylesheets/site.scss */
-body {
-  padding: 0;
-  margin: 0;
-}
-
-/* line 561, ../../../app/stylesheets/site.scss */
 .gmenu {
-  margin-left: 200px;
+  font: 13px/27px Arial, sans-serif;
+  margin-left: 100px;
   color: #3366CC;
   height: 30px;
 }
 
-/* line 568, ../../../app/stylesheets/site.scss */
+/* line 564, ../../../app/stylesheets/site.scss */
 .gmenu a:hover {
   background-color: #e4ebf8;
 }
 
-/* line 571, ../../../app/stylesheets/site.scss */
+/* line 567, ../../../app/stylesheets/site.scss */
 .gmenu a {
   text-decoration: none;
   padding: 4px 8px 7px;
@@ -793,20 +788,20 @@ body {
   outline: none;
 }
 
-/* line 577, ../../../app/stylesheets/site.scss */
+/* line 573, ../../../app/stylesheets/site.scss */
 .gmenu ul {
   list-style: none;
   margin: 0;
   padding: 0 0 0 10px;
 }
 
-/* line 582, ../../../app/stylesheets/site.scss */
+/* line 578, ../../../app/stylesheets/site.scss */
 .gmenu ul li {
   padding: 0;
   float: left;
 }
 
-/* line 587, ../../../app/stylesheets/site.scss */
+/* line 583, ../../../app/stylesheets/site.scss */
 .gmenu ul li ul li {
   padding: 0;
   float: none;
@@ -814,7 +809,7 @@ body {
   width: 100%;
 }
 
-/* line 593, ../../../app/stylesheets/site.scss */
+/* line 589, ../../../app/stylesheets/site.scss */
 .gmenu ul li ul {
   position: absolute;
   border: 1px solid #C3D1EC;
@@ -824,13 +819,13 @@ body {
   padding: 0px 16px 0px 0;
 }
 
-/* line 601, ../../../app/stylesheets/site.scss */
-.active ul {
+/* line 597, ../../../app/stylesheets/site.scss */
+.gactive ul {
   display: block !important;
 }
 
-/* line 604, ../../../app/stylesheets/site.scss */
-.active a {
+/* line 600, ../../../app/stylesheets/site.scss */
+.gactive a {
   background-color: white;
   border: 1px solid #C3D1EC;
   border-bottom: 0;
@@ -842,29 +837,83 @@ body {
   z-index: 1;
 }
 
-/* line 615, ../../../app/stylesheets/site.scss */
-.active a:hover {
+/* line 611, ../../../app/stylesheets/site.scss */
+.gactive a:hover {
   background-color: white;
 }
 
-/* line 618, ../../../app/stylesheets/site.scss */
-.active ul a:hover {
+/* line 614, ../../../app/stylesheets/site.scss */
+.gactive ul a:hover {
   background-color: #e4ebf8;
 }
 
-/* line 622, ../../../app/stylesheets/site.scss */
-.active ul a {
+/* line 618, ../../../app/stylesheets/site.scss */
+.gactive ul a {
   border: 0 !important;
   box-shadow: 0 0 0 #CCCCCC;
   border: 0;
   width: 100%;
 }
 
-/* line 628, ../../../app/stylesheets/site.scss */
+/* line 624, ../../../app/stylesheets/site.scss */
 .garrow {
   border-color: #3366CC transparent transparent;
   border-style: solid dashed dashed;
   margin-left: 5px;
   position: relative;
   top: 20px;
+}
+
+/*Simple Navigator Menu*/
+/* line 633, ../../../app/stylesheets/site.scss */
+.simple_menu {
+  width: 100%;
+  color: #3366CC;
+  height: 20px;
+  float: left;
+}
+
+/* line 639, ../../../app/stylesheets/site.scss */
+.simple_menu a {
+  text-decoration: none;
+  padding: 4px 8px 7px;
+  color: #3366CC;
+  outline: none;
+  border: 1px solid #444;
+}
+
+/* line 646, ../../../app/stylesheets/site.scss */
+.simple_menu a:hover {
+  background-color: #e4ebf8;
+}
+
+/* line 649, ../../../app/stylesheets/site.scss */
+.simple_menu a {
+  border: 0 !important;
+  box-shadow: 0 0 0 #CCCCCC;
+  border: 0;
+  width: 100%;
+}
+
+/* line 658, ../../../app/stylesheets/site.scss */
+.simple_menu ul {
+  list-style: none;
+  margin: 0;
+  padding: 0 0 0 10px;
+}
+
+/* line 663, ../../../app/stylesheets/site.scss */
+.simple_menu ul li {
+  padding: 0;
+  float: left;
+}
+
+/* line 667, ../../../app/stylesheets/site.scss */
+#navi {
+  margin-left: 100px;
+}
+
+/* line 670, ../../../app/stylesheets/site.scss */
+#account_bar {
+  float: right;
 }
