--- a/app/views/users/_head.html.haml
+++ b/app/views/users/_head.html.haml
@@ -7,6 +7,8 @@
     \|
     = link_to t('site.personal_info'), edit_user_path(@user)
     \|
+    = link_to t('site.operate_password'), "/m/operate_password"
+    \|
     = link_to t('site.my_participants'), :controller=>'account', :action=>'participant', :id=>@user
     \|
     = link_to t('account.charge_log'), :controller=>'account', :action=>'charge_log', :id=>@user
