--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,7 +1,8 @@
 = render 'users/head'
 
-.solidshape
-  = render 'account/user'
+#wide
+  .solidshape
+    = render 'account/user'
 
 #equal-left
   .bordershape
