--- a/app/views/account/charge_log.html.haml
+++ b/app/views/account/charge_log.html.haml
@@ -1,6 +1,7 @@
 = render 'users/head'
 
-.solidshape
-  = render 'account/user'
+#wide
+  .solidshape
+    = render 'account/user'
 
-= render 'account/trades'
+  = render 'account/trades'
