--- a/app/views/account/trade_log.haml
+++ b/app/views/account/trade_log.haml
@@ -1,11 +1,12 @@
 = render 'users/head'
 
-.solidshape
-  = render 'account/user'
-/
-  = t('site.user_manage')
-  - form_tag :controller => 'board', :action => 'search_user' do
-    = label_tag t 'site.login_name'
-    = search_field_tag 'username', session[:search_username]
-    = submit_tag 'Search'
-= render 'account/tradelogs'
+#wide
+  .solidshape
+    = render 'account/user'
+  /
+    = t('site.user_manage')
+    - form_tag :controller => 'board', :action => 'search_user' do
+      = label_tag t 'site.login_name'
+      = search_field_tag 'username', session[:search_username]
+      = submit_tag 'Search'
+  = render 'account/tradelogs'
