--- a/app/views/issues/_issues.html.haml
+++ b/app/views/issues/_issues.html.haml
@@ -1,38 +1,39 @@
-%table
-  %caption
-    /= t 'site.issue'
-  %thead
-    %tr
-      %th= t 'global.title'
-      %th= t 'global.status'
-      %th= t 'site.login_name'
-      %th= t 'global.type'
-      %th= t 'manage.service'
-      %th= t 'global.created_at'
-      %th
-  - @issues.each do |issue|
-    %tr{:class=>'double'}
-      %td= issue.title
-      %td= issue.status
-      %th= issue.user.username if issue.user
-      %th= issue.itype
-      - dealer = User.where(issue.dealer_id).first
-      %th= dealer.nil? ? '-' : dealer.username
-      %th= l issue.created_at, :format => :long
-      %td
-        = link_to image_tag('view.png', :alt=>t('global.show')), issue, {:title => t('global.show')} 
-        - if issue.open? or issue.user.nil?
-          - if admin?
-            = link_to image_tag('edit.png', :alt=>t('global.edit')), edit_issue_path(issue), {:title => t('global.edit')}
-            = link_to image_tag('delete.png', :alt=>t('global.delete')), issue, :confirm => t('site.are_you_sure'), :method => :delete
-          - if !issue.task_issue? and (admin? or manager?)
-            = link_to t('global.done'), {:controller => 'board', :action => 'fix_issue', :id => issue}, {:confirm => t('site.are_you_sure')} if issue.can_fix?
-            = link_to t('global.close'), {:controller => 'board', :action => 'close_issue', :id => issue}, {:confirm => t('site.are_you_sure')} if issue.can_shutdown?
-    %tr
-      %td{:colspan=>8}
-        #task_detail
-          = issue.content.length > 30 ? issue.content[0,30]+'...' : issue.content
-  %tfoot
-    %tr
-      %th{:colspan=>8}
-        = will_paginate @issues
+#wide
+  %table
+    %caption
+      /= t 'site.issue'
+    %thead
+      %tr
+        %th= t 'global.title'
+        %th= t 'global.status'
+        %th= t 'site.login_name'
+        %th= t 'global.type'
+        %th= t 'manage.service'
+        %th= t 'global.created_at'
+        %th
+    - @issues.each do |issue|
+      %tr{:class=>'double'}
+        %td= issue.title
+        %td= issue.status
+        %th= issue.user.username if issue.user
+        %th= issue.itype
+        - dealer = User.where(issue.dealer_id).first
+        %th= dealer.nil? ? '-' : dealer.username
+        %th= l issue.created_at, :format => :long
+        %td
+          = link_to image_tag('view.png', :alt=>t('global.show')), issue, {:title => t('global.show')} 
+          - if issue.open? or issue.user.nil?
+            - if admin?
+              = link_to image_tag('edit.png', :alt=>t('global.edit')), edit_issue_path(issue), {:title => t('global.edit')}
+              = link_to image_tag('delete.png', :alt=>t('global.delete')), issue, :confirm => t('site.are_you_sure'), :method => :delete
+            - if !issue.task_issue? and (admin? or manager?)
+              = link_to t('global.done'), {:controller => 'board', :action => 'fix_issue', :id => issue}, {:confirm => t('site.are_you_sure')} if issue.can_fix?
+              = link_to t('global.close'), {:controller => 'board', :action => 'close_issue', :id => issue}, {:confirm => t('site.are_you_sure')} if issue.can_shutdown?
+      %tr
+        %td{:colspan=>8}
+          #task_detail
+            = issue.content.length > 30 ? issue.content[0,30]+'...' : issue.content
+    %tfoot
+      %tr
+        %th{:colspan=>8}
+          = will_paginate @issues
