--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -34,158 +34,166 @@
         - flash.each do |name, msg|
           = content_tag :div, msg, :id => "#{name}"
       /.container
-      #toolbar
-        - if user_signed_in?
-          =t('site.welcome', :name => current_user.username)
-        = link_to '/', {:title=>t('site.label')} do
-          = image_tag('home.png')
-          = t('site.label')
-        - if user_signed_in?
-          = link_to notices_path, {:title=>t('site.notice_center')} do
-            = image_tag('info.png')
-            = t('site.notice_center')
-          - messages = current_user.message_boxes.where(:status => 'unread').order("created_at DESC")
-          - if messages.length > 0
-            - if messages.length == 1
-              = link_to image_tag('message.png') + messages.length.to_s + t('message.message_tail'), :controller => 'board', :action => 'view_message', :id => messages.first.message
-            - else
-              = link_to image_tag('message.png') + messages.length.to_s + t('message.message_tail'), '/m/message'
-          = link_to edit_user_registration_path do
-            = image_tag('user_info.png')
-            = t('site.profile')
-          = link_to destroy_user_session_path do
-            = image_tag('logout.png')
-            = t('site.logout')
-        - else
-          = link_to new_user_session_path do
-            = image_tag('login.png')
-            = t('site.login')
-          = link_to new_user_registration_path do
-            = image_tag('sign_up.png')
-            = t('site.register')
+      #space-left
         %br
-        /[if IE]
-          %p
-            %br
-            = t 'site.ie'
-      #navibar
-        #nicemenu
-          %ul
-            - if user_signed_in?
-              - if guest? or user?
-                %li
-                  %span.short
-                    = link_to new_task_url do
-                      = image_tag('add.png')
-                      = t('site.new_task') 
-                %li
-                  %span.short
-                    = link_to '/m/charge' do
-                      = image_tag('add.png')
-                      = t('trade.charge_payment') 
-              /
+      #middle
+        #toolbar
+          - if user_signed_in?
+            =t('site.welcome', :name => current_user.username)
+          = link_to '/', {:title=>t('site.label')} do
+            = image_tag('home.png')
+            = t('site.label')
+          - if user_signed_in?
+            = link_to notices_path, {:title=>t('site.notice_center')} do
+              = image_tag('info.png')
+              = t('site.notice_center')
+            - messages = current_user.message_boxes.where(:status => 'unread').order("created_at DESC")
+            - if messages.length > 0
+              - if messages.length == 1
+                = link_to image_tag('message.png') + messages.length.to_s + t('message.message_tail'), :controller => 'board', :action => 'view_message', :id => messages.first.message
+              - else
+                = link_to image_tag('message.png') + messages.length.to_s + t('message.message_tail'), '/m/message'
+            = link_to edit_user_registration_path do
+              = image_tag('user_info.png')
+              = t('site.profile')
+            = link_to destroy_user_session_path do
+              = image_tag('logout.png')
+              = t('site.logout')
+          - else
+            = link_to new_user_session_path do
+              = image_tag('login.png')
+              = t('site.login')
+            = link_to new_user_registration_path do
+              = image_tag('sign_up.png')
+              = t('site.register')
+          %br
+          /[if IE]
+            %p
+              %br
+              = t 'site.ie'
+        #navibar
+          #nicemenu
+            %ul
+              - if user_signed_in?
+                - if guest? or user?
+                  %li
+                    %span.short
+                      = link_to new_task_url do
+                        = image_tag('add.png')
+                        = t('site.new_task') 
+                  %li
+                    %span.short
+                      = link_to '/m/charge' do
+                        = image_tag('add.png')
+                        = t('trade.charge_payment') 
+                /
+                  %li
+                    %span.head_menu
+                      = link_to t('site.notice_center'), notices_path
                 %li
                   %span.head_menu
-                    = link_to t('site.notice_center'), notices_path
-              %li
-                %span.head_menu
-                  = link_to t('site.task'), tasks_url
-                  = image_tag 'arrow.png', :width => 18, :height => 15, :align => 'top', :class => 'arrow'
-                .sub_menu
-                  - if user?
-                    = link_to t('site.new_task'), new_task_url
-                    %hr
-                  = link_to t('site.task_type',:task_type=>'taobao'), :controller=>'board', :action=>'task_list', :task_type => 'taobao'
-                  = link_to t('site.task_type',:task_type=>'paipai'), :controller=>'board', :action=>'task_list', :task_type => 'paipai'
-                  = link_to t('site.task_type',:task_type=>'youa'), :controller=>'board', :action=>'task_list', :task_type => 'youa'
-                  - if guest? or user? or manager?
-                    %hr
-                    = link_to t('site.my_task'), :controller=>'board', :action=>'task_show', :task_type => 'task'
-                    = link_to t('site.my_todo'), :controller=>'board', :action=> 'task_show', :task_type => 'todo'
-                    = link_to t('site.my_cash'), :controller=>'board', :action=> 'task_show', :task_type => 'cash'
-                  - if admin?
-                    %hr
-                    = link_to t('site.payment_task'), :controller=>'board', :action=> 'task_list', :task_type => 'payment'
+                    = link_to t('site.task'), tasks_url
+                    = image_tag 'arrow.png', :width => 18, :height => 15, :align => 'top', :class => 'arrow'
+                  .sub_menu
+                    - if user?
+                      = link_to t('site.new_task'), new_task_url
+                      %hr
+                    = link_to t('site.task_type',:task_type=>'taobao'), :controller=>'board', :action=>'task_list', :task_type => 'taobao'
+                    = link_to t('site.task_type',:task_type=>'paipai'), :controller=>'board', :action=>'task_list', :task_type => 'paipai'
+                    = link_to t('site.task_type',:task_type=>'youa'), :controller=>'board', :action=>'task_list', :task_type => 'youa'
+                    - if guest? or user? or manager?
+                      %hr
+                      = link_to t('site.my_task'), :controller=>'board', :action=>'task_show', :task_type => 'task'
+                      = link_to t('site.my_todo'), :controller=>'board', :action=> 'task_show', :task_type => 'todo'
+                      = link_to t('site.my_cash'), :controller=>'board', :action=> 'task_show', :task_type => 'cash'
+                    - if admin?
+                      %hr
+                      = link_to t('site.payment_task'), :controller=>'board', :action=> 'task_list', :task_type => 'payment'
 
-            - if user_signed_in?
-              %li
-                %span.head_menu
-                  = link_to t('site.user_center'), current_user
-                  = image_tag 'arrow.png', :width => 18, :height => 15, :align => 'top', :class => 'arrow'
-                .sub_menu
-                  - if guest? or user?
-                    = link_to t('site.my_account'), '/m/index'
-                    = link_to t('trade.charge_payment'), '/m/charge'
-                    = link_to t('trade.charge_point'), '/m/payment'
-                    =# link_to t('site.recyling_point'), '/m/point_money'
-                    = link_to t('trade.score_point'), '/m/score_point'
-                    %hr
-                    = link_to t('site.my_transport'), "/m/transport_list/#{current_user.id}"
-                    = link_to t('site.my_participants'), user_participants_url(current_user)
-                    = link_to t('site.operate_password'), "/m/operate_password"
-                    %hr
-                    = link_to t('site.my_messages'), '/m/message'
-                  - if salesman?
-                    = link_to t('site.sales_business'), transactions_url
+              - if user_signed_in?
+                %li
+                  %span.head_menu
+                    = link_to t('site.user_center'), current_user
+                    = image_tag 'arrow.png', :width => 18, :height => 15, :align => 'top', :class => 'arrow'
+                  .sub_menu
+                    - if guest? or user?
+                      = link_to t('site.my_account'), '/m/index'
+                      = link_to t('trade.charge_payment'), '/m/charge'
+                      = link_to t('trade.charge_point'), '/m/payment'
+                      =# link_to t('site.recyling_point'), '/m/point_money'
+                      = link_to t('trade.score_point'), '/m/score_point'
+                      %hr
+                      = link_to t('site.my_transport'), "/m/transport_list/#{current_user.id}"
+                      = link_to t('site.my_participants'), user_participants_url(current_user)
+                      = link_to t('site.operate_password'), "/m/operate_password"
+                      %hr
+                      = link_to t('site.my_messages'), '/m/message'
+                    - if salesman?
+                      = link_to t('site.sales_business'), transactions_url
 
 
-            - if manager? or admin?
-              %li
-                %span.head_menu
-                  = link_to t('site.manage_center'), admin? ? users_path : ''
-                  = image_tag 'arrow.png', :width => 18, :height => 15, :align => 'top', :class => 'arrow'
-                .sub_menu
-                  - if admin?
-                    =# link_to t('site.user_manage'), users_path
-                    = link_to t('site.cash_task'), :controller=>'board', :action=>'task_list', :task_type => 'cash'
-                    = link_to t('site.big_cash'), '/t/big_cash'
-                    = link_to t('trade.manage_payment'), '/m/approve/charge'
-                    = link_to t('trade.manage_point'), '/m/approve/point'
-                    =# link_to t('trade.manage_recyling'), '/m/approve/recyling'
-                    = link_to t('trade.manage_score'), '/m/approve/score'
+              - if manager? or admin?
+                %li
+                  %span.head_menu
+                    = link_to t('site.manage_center'), admin? ? users_path : ''
+                    = image_tag 'arrow.png', :width => 18, :height => 15, :align => 'top', :class => 'arrow'
+                  .sub_menu
+                    - if admin?
+                      =# link_to t('site.user_manage'), users_path
+                      = link_to t('site.cash_task'), :controller=>'board', :action=>'task_list', :task_type => 'cash'
+                      = link_to t('site.big_cash'), '/t/big_cash'
+                      = link_to t('trade.manage_payment'), '/m/approve/charge'
+                      = link_to t('trade.manage_point'), '/m/approve/point'
+                      =# link_to t('trade.manage_recyling'), '/m/approve/recyling'
+                      = link_to t('trade.manage_score'), '/m/approve/score'
+                      %hr
+                    = link_to t('site.issue'), issues_path
+                    = link_to t('site.tasklog_center'), '/t/tasklogs'
+                    = link_to t('site.accountlog_center'), '/t/accountlogs'
                     %hr
-                  = link_to t('site.issue'), issues_path
-                  = link_to t('site.tasklog_center'), '/t/tasklogs'
-                  = link_to t('site.accountlog_center'), '/t/accountlogs'
-                  %hr
-                  - if admin?
-                    =# link_to t('notice.new_notice'), new_notice_url
-                    =# link_to t('article.new_article'), new_article_url
-                    = link_to t('site.finance_center'), transactions_url
-                    %hr
-                    = link_to t('site.platform_status'), '/status/total'
-                    = link_to t('system.message'), '/s/message'
-                    %hr
-                    = link_to t('site.setting'), '/s/setting'
+                    - if admin?
+                      =# link_to t('notice.new_notice'), new_notice_url
+                      =# link_to t('article.new_article'), new_article_url
+                      = link_to t('site.finance_center'), transactions_url
+                      %hr
+                      = link_to t('site.platform_status'), '/status/total'
+                      = link_to t('system.message'), '/s/message'
+                      %hr
+                      = link_to t('site.setting'), '/s/setting'
 
-            - if user? or guest?
-              %li
-                %span.head_menu
-                  = link_to t('site.service_center'), '/t/service'
-                  = image_tag 'arrow.png', :width => 18, :height => 15, :align => 'top', :class => 'arrow'
-                .sub_menu
-                  = link_to t('site.service_list'), '/t/service'
-                  = link_to t('site.service'), issues_path 
+              - if user? or guest?
+                %li
+                  %span.head_menu
+                    = link_to t('site.service_center'), '/t/service'
+                    = image_tag 'arrow.png', :width => 18, :height => 15, :align => 'top', :class => 'arrow'
+                  .sub_menu
+                    = link_to t('site.service_list'), '/t/service'
+                    = link_to t('site.service'), issues_path 
 
-            - if user_signed_in?
-              %li
-                %span.head_menu
-                  = link_to t('site.transport_center'), transports_path
+              - if user_signed_in?
+                %li
+                  %span.head_menu
+                    = link_to t('site.transport_center'), transports_path
 
-              %li
-                %span.head_menu
-                  = link_to t('site.rule'), articles_path
+                %li
+                  %span.head_menu
+                    = link_to t('site.rule'), articles_path
 
-            - if superadmin?
-              %li
-                %span.head_menu
-                  = link_to t('site.admin'), '/admin'
-                  = image_tag 'arrow.png', :width => 18, :height => 15, :align => 'top', :class => 'arrow'
-                .sub_menu
-                  = link_to t('site.admin'), '/admin'
-                  = link_to t('site.roles'), '/t/roles'
+              - if superadmin?
+                %li
+                  %span.head_menu
+                    = link_to t('site.admin'), '/admin'
+                    = image_tag 'arrow.png', :width => 18, :height => 15, :align => 'top', :class => 'arrow'
+                  .sub_menu
+                    = link_to t('site.admin'), '/admin'
+                    = link_to t('site.roles'), '/t/roles'
+        = yield
+      #space-right
 
-      = yield
+      #space-left
+        %br
+      #middle
+      #space-right
 
     #push
 
