--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -78,5 +78,5 @@
           = link_to image_tag('delete.png', :alt=>t('global.delete')), user, :confirm => t('site.are_you_sure'), :method => :delete
   %tfoot
     %tr
-      %th{:collect=>7}
+      %th{:colspan=>7}
         = will_paginate @users
